<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<!-- 
	# to run acceptance from CI (ie. start containers, deploy apps, run tests and stop containers) 
	mvn clean install -Pbrms,itest -o
	
	# to start containers for Development purposes: 
	mvn clean package cargo:run -Pbrms
	-->
	<modelVersion>4.0.0</modelVersion>
	<name>${project.groupId}.${project.artifactId}</name>
	<parent>
		<groupId>org.jboss.quickstarts</groupId>
		<artifactId>brms6</artifactId>
		<version>6.0.0-SNAPSHOT</version>
	</parent>
	<groupId>${project.parent.groupId}.${project.parent.artifactId}</groupId>
	<artifactId>acceptance</artifactId>

	<properties>
		<cucumber.version>1.1.3</cucumber.version>
	</properties>
	
	<build>
		<plugins>
			<!-- disable test by default, itest will use the failsafe plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.15</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<profiles>
		<profile>
			<id>brms</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.1</version>
						<configuration>
							<source>1.7</source>
							<target>1.7</target>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.codehaus.cargo</groupId>
						<artifactId>cargo-maven2-plugin</artifactId>
						<version>1.1.3</version>
						<executions>
							<execution>
								<id>start-container</id>
								<phase>pre-integration-test</phase>
								<goals>
									<goal>start</goal>
								</goals>
							</execution>
							<execution>
								<id>stop-container</id>
								<phase>post-integration-test</phase>
								<goals>
									<goal>stop</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<container>
								<!-- tomcat -> http://repo1.maven.org/maven2/org/apache/tomcat/tomcat/7.0.35/tomcat-7.0.35.zip -->
								<!-- 
								<containerId>jboss7x</containerId>
								<home>/home/mallen/Work/poc/acceptance-brms6-quickstart/jboss-eap-6.1</home>
								-->
								<containerId>tomcat7x</containerId>
								<artifactInstaller>
									<groupId>org.apache.tomcat</groupId>
									<artifactId>tomcat</artifactId>
									<version>7.0.35</version>
								</artifactInstaller>
								<output>target/logs/container.log</output>
								<log>target/logs/cargo-plugin.log</log>
								<timeout>120000</timeout>
								<systemProperties>
									<!-- 
									<jboss.server.base.dir>/home/mallen/Work/poc/acceptance-brms6-quickstart/jboss-eap-6.1/standalone</jboss.server.base.dir>
									<user.dir>/home/mallen/Work/poc/acceptance-brms6-quickstart/jboss-eap-6.1</user.dir>
									<logging.configuration>/home/mallen/Work/poc/acceptance-brms6-quickstart/jboss-eap-6.1/standalone/configuration/logging.properties</logging.configuration>
									<org.jboss.boot.log.file>/home/mallen/Work/poc/acceptance-brms6-quickstart/jboss-eap-6.1/standalone/log/boot.log</org.jboss.boot.log.file>
									<org.kie.demo>false</org.kie.demo>
									 -->
								</systemProperties>
								<!-- these end up in <tomcat_home>/common/lib -->
								<dependencies>
									<dependency>
										<groupId>org.slf4j</groupId>
										<artifactId>slf4j-api</artifactId>
									</dependency>
									<!--
									<dependency>
										<groupId>org.slf4j</groupId>
										<artifactId>slf4j-log4j12</artifactId>
									</dependency>
									<dependency>
										<groupId>log4j</groupId>
										<artifactId>log4j</artifactId>
									</dependency>
									-->
									<dependency>
										<groupId>org.kie</groupId>
										<artifactId>kie-tomcat-integration</artifactId>
									</dependency>
									<dependency>
										<groupId>javax.security.jacc</groupId>
										<artifactId>javax.security.jacc-api</artifactId>
									</dependency>
									
								</dependencies>
							</container>
							<configuration>
								<properties>
									<!--
										-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000 -Xnoagent
										-Dcom.sun.management.jmxremote.port=6000
										-Dcom.sun.management.jmxremote.authenticate=false
										-Dcom.sun.management.jmxremote.ssl=false
									-->
									<cargo.jvmargs>
										-Xmx1024m
										-XX:MaxPermSize=256m
									</cargo.jvmargs>
								</properties>
								<configfiles>
									<configfile>
										<file>target/classes/server.xml</file>
										<todir>conf/</todir>
										<tofile>server.xml</tofile>
									</configfile>
								</configfiles>
								<deployables>
									<deployable>

										<groupId>org.kie</groupId>
										<artifactId>kie-drools-wb-distribution-wars</artifactId>
										<classifier>tomcat7.0</classifier>

										<!-- <groupId>org.kie</groupId> <artifactId>kie-drools-wb-webapp</artifactId> -->
										<type>war</type>
										<properties>
											<context>business-central</context>
										</properties>
									</deployable>
								</deployables>
							</configuration>
						</configuration>
					</plugin>

					<plugin>
						<groupId>org.jboss.kie.maven</groupId>
						<artifactId>maven-kie-deployer-plugin</artifactId>
						<version>1.0.0</version>
						<executions>
							<execution>
								<id>deploy-kie-modules</id>
								<phase>package</phase>
								<goals>
									<goal>deploy</goal>
								</goals>
								<configuration>
									<debug>true</debug>
									<serverUri>http://localhost:8080/business-central</serverUri>
									<username>admin</username>
									<password>admin</password>
									<timeoutInSeconds>60</timeoutInSeconds>
									<deployables>
										<deployable>
											<groupId>org.jboss.quickstarts.brms6</groupId>
											<artifactId>business-rules</artifactId>
											<version>6.0.0-SNAPSHOT</version>
											<strategy>SINGLETON</strategy> <!-- SINGLETON, PER_REQUEST, PER_PROCESS_INSTANCE -->
										</deployable>
									</deployables>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>javax.security.jacc</groupId>
			<artifactId>javax.security.jacc-api</artifactId>
			<version>1.5</version>
		</dependency>
		<dependency>
			<groupId>org.kie</groupId>
			<artifactId>kie-tomcat-integration</artifactId>
			<version>${brms.version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.kie</groupId>
			<artifactId>kie-drools-wb-distribution-wars</artifactId>
			<classifier>tomcat7.0</classifier>
			<type>war</type>
			<version>6.1.0.CR1</version>
		</dependency>
		<!-- 
		<dependency>
			<groupId>org.kie</groupId>
			<artifactId>kie-drools-wb-webapp</artifactId>
			<version>6.1.0.CR1</version>
			<type>war</type>
		</dependency>
		 -->

		<!-- cucumber -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-picocontainer</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
